--- a/Project.toml
+++ b/Project.toml
@@ -15,4 +15,5 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MultivariateMoments = "f4abf1af-0426-5881-a0da-e2f168889b5e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 SumOfSquares = "4b9e565b-77fc-50a5-a571-1244f986bda1"
