--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ uuid = "086be79b-982c-4ee0-9f3a-5052a7be4b8e"
 version = "0.1.0"
 
 [deps]
+Clarabel = "61c947e1-3e6d-4ee4-985a-eec8c727bd6e"
 ConicBenchmarkUtilities = "e95a7839-07fb-532d-9a0e-071766bb5168"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
@@ -19,3 +20,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 SumOfSquares = "4b9e565b-77fc-50a5-a571-1244f986bda1"
+
+
+[compat]
+DataFrames = "1.5"
