--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 [deps]
 Clarabel = "61c947e1-3e6d-4ee4-985a-eec8c727bd6e"
 ClarabelRs = "a0c58a0a-712c-48b7-9fd4-64369ecb2011"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 ConicBenchmarkUtilities = "e95a7839-07fb-532d-9a0e-071766bb5168"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
