--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 MultivariateMoments = "f4abf1af-0426-5881-a0da-e2f168889b5e"
 OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
