--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 MultiFloats = "bdf0d083-296b-4888-a5b6-7498122e68a5"
 MultivariateMoments = "f4abf1af-0426-5881-a0da-e2f168889b5e"
 OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
+Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
